Move configureEntitlements to ElasticsearchTestBasePlugin as-is